--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-api-middleware": "^2.0.0-beta.3",
+    "redux-batched-actions": "^0.1.6",
     "redux-form": "^7.0.3",
     "redux-i18n": "^1.5.4",
     "redux-thunk": "^2.2.0",
