--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
-    "babel-preset-react-app": "^3.0.1",
+    "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -30,19 +30,19 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.6",
     "promise": "7.1.1",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
-    "react-dev-utils": "^3.0.2",
-    "react-dom": "^15.6.1",
-    "react-error-overlay": "^1.0.9",
-    "react-redux": "^5.0.5",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.31.5",
+    "react-dev-utils": "^3.1.1",
+    "react-dom": "^15.6.2",
+    "react-error-overlay": "^1.0.10",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-router-bootstrap": "^0.24.2",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-api-middleware": "^2.0.0-beta.3",
-    "redux-form": "^7.0.3",
-    "redux-i18n": "^1.5.4",
+    "redux-api-middleware": "^2.0.1",
+    "redux-form": "^7.2.0",
+    "redux-i18n": "^1.5.10",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
