--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-form": "^7.0.3",
     "redux-i18n": "^1.5.4",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
     "url-loader": "0.5.9",
