--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-api-middleware": "^2.0.0-beta.3",
+    "redux-api-middleware": "^2.3.0",
     "redux-batched-actions": "^0.1.6",
     "redux-form": "^7.0.3",
-    "redux-i18n": "^1.5.4",
+    "redux-i18n": "^1.5.11",
     "redux-thunk": "^2.2.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.3",
